--- a/admin/src/app/settings/event.component.html
+++ b/admin/src/app/settings/event.component.html
@@ -77,7 +77,7 @@
                                     <label class="col-sm-3 form-control-label m-t-5">Event Category </label>
                                     <div class="col-sm-8 text-left">
                                         <ng-select [multiple]="true" [items]="catNameArray" (data)="refreshCategoryValue($event)" (selected)="category_selected($event)"
-                                            (removed)="removed($event)" placeholder="No Department selected" id="event_category"
+                                            (removed)="removed($event)" placeholder="No Category selected" id="event_category"
                                             [formControl]="event_category">
                                         </ng-select>
                                     </div>
@@ -277,9 +277,7 @@
                         (activate)="onActivate($event)">
                         <ngx-datatable-column name="Name" prop="name"></ngx-datatable-column>
                         <ngx-datatable-column name="Description" prop="description"></ngx-datatable-column>
-                        <ngx-datatable-column name="Repeated" prop="repeated"></ngx-datatable-column>
-                        <ngx-datatable-column name="Period" prop="period"></ngx-datatable-column>
-                        <ngx-datatable-column name="Week Day" prop="start_date"></ngx-datatable-column>
+                        <ngx-datatable-column name="Period" prop="periodicity"></ngx-datatable-column>
                         <ngx-datatable-column name="Start Time" prop="start_time"></ngx-datatable-column>
                         <ngx-datatable-column name="Venue" prop="venue"></ngx-datatable-column>
                     </ngx-datatable>
