Poeple Pages Added

--- a/admin/src/app/layouts/full-layout.component.html
+++ b/admin/src/app/layouts/full-layout.component.html
@@ -229,13 +229,13 @@
           <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-people"></i> People</a>
           <ul class="nav-dropdown-items">
             <li class="nav-item">
-              <a class="nav-link" routerLinkActive="active" [routerLink]="['/components/buttons']"><i class="icon-user"></i> Member</a>
+              <a class="nav-link" routerLinkActive="active" [routerLink]="['/people/member']"><i class="icon-user"></i> Member</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLinkActive="active" [routerLink]="['/components/social-buttons']"><i class="icon-note"></i> Visitor</a>
+              <a class="nav-link" routerLinkActive="active" [routerLink]="['/people/visitor']"><i class="icon-note"></i> Visitor</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLinkActive="active" [routerLink]="['/components/cards']"><i class="icon-home"></i> Families</a>
+              <a class="nav-link" routerLinkActive="active" [routerLink]="['/people/family']"><i class="icon-home"></i> Families</a>
             </li>
             <!--
             <li class="nav-item">
@@ -301,7 +301,7 @@
               <a class="nav-link" routerLinkActive="active" [routerLink]="['/settings/communication']"><i class="icon-note"></i> Communication</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLinkActive="active" [routerLink]="['/settings/users']"><i class="icon-people"></i> Users</a>
+              <a class="nav-link" routerLinkActive="active" [routerLink]="['/settings/user']"><i class="icon-people"></i> Users</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLinkActive="active" [routerLink]="['/settings/roles']"><i class="icon-user"></i> Roles</a>
